...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/groupMenu"
    tools:context="com.helper.groupa.studenthelper.GroupMain">

    <item
        android:id="@+id/group_view_user"
        android:title="User Info"

        />

    <item
        android:id="@+id/group_view_active"
        android:title="Active"
...
