<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.helper.groupa.studenthelper.GBGrade">

    <EditText
        android:id="@+id/gb_grade_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:inputType="text"
        android:maxLength="24"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/gb_grade_earned"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gb_grade_name"
        android:layout_marginTop="10dp"
        android:inputType="number|numberDecimal"
        android:maxLength="12"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/gb_grade_possible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gb_grade_earned"
        android:layout_marginTop="10dp"
        android:inputType="number|numberDecimal"
        android:maxLength="12"
        android:maxLines="1"/>

    <CheckBox
        android:id="@+id/gb_grade_ec"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gb_grade_possible"
        android:layout_marginStart="5.0dp"
        android:layout_marginTop="10.0dp"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/gb_extra_credit"
        android:textSize="18sp"
        android:theme="@android:style/Theme.Holo.Light"/>

</RelativeLayout>