...
        android:drawablePadding="15dp"
        android:drawableStart="@android:drawable/ic_menu_revert"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"/>

    <ListView
        android:id="@+id/gb_grade_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/gb_add_grade_button"
        android:layout_below="@+id/grade_title_syllabus"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15.0dp"
        android:layout_marginTop="15.0dp"
        android:background="@android:color/holo_green_light"
        android:divider="@drawable/gb_divider"
...
